--- a/package.json
+++ b/package.json
@@ -25,17 +25,20 @@
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "10.3.2",
     "@nestjs/platform-express": "10.3.2",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "7.2.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "5.0.5",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@nestjs/cli": "10.3.2",
     "@nestjs/schematics": "10.1.1",
     "@nestjs/testing": "10.3.2",
+    "@types/cron": "^2.4.0",
     "@types/express": "4.17.21",
     "@types/node": "20.8.7",
     "@types/supertest": "2.0.16",
