--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "class-validator": "0.14.1",
     "ngrok": "^5.0.0-beta.2",
     "reflect-metadata": "^0.1.14",
-    "rimraf": "5.0.5",
     "rxjs": "7.8.1",
     "telegraf": "^4.16.3"
   },
@@ -51,6 +50,7 @@
     "eslint-plugin-import": "2.29.1",
     "jest": "29.7.0",
     "prettier": "3.2.5",
+    "rimraf": "^5.0.7",
     "supertest": "6.3.3",
     "ts-jest": "29.1.2",
     "ts-loader": "9.5.1",
