--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GEMINI_KEY=AIzaSyB6qvCK4JZtBDmBQ3pecOlQVCZ2nX2994Y
 TELEGRAM_BOT_TOKEN=7114395001:AAF1kDb4UOBNo-frTBlEL7b8OPcTi5vFx_k
+NODE_TLS_REJECT_UNAUTHORIZED=0
