--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.7",
+    "@babel/core": "^7.24.7",
     "@nestjs/cli": "10.3.2",
     "@nestjs/schematics": "10.1.1",
     "@nestjs/testing": "10.3.2",
