--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,22 @@
     "version": 2,
     "builds": [
         {
-            "src": "build/main.js",
+            "src": "package.json",
+            "use": "vercel-sapper"
+        },
+        {
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "build/main.js",
-            "methods": [ "GET", "POST", "PUT", "PATCH", "DELETE" ]
+            "dest": "index.js",
+            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+                "Access-Control-Allow-Origin": "*"
+            }
         }
     ]
 }
