--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,14 @@
             "use": "vercel-sapper"
         },
         {
-            "src": "index.js",
+            "src": "main.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "index.js",
+            "dest": "main.js",
             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
             "headers": {
                 "Access-Control-Allow-Origin": "*"
