--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "main.js",
+            "src": "dist/*",
             "use": "@vercel/node"
         }
     ],
@@ -10,7 +10,14 @@
         {
             "src": "/(.*)",
             "dest": "main.js",
-            "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "PATCH",
+                "OPTIONS"
+            ],
             "headers": {
                 "Access-Control-Allow-Origin": "*"
             }
